Fix spacing in message box

--- a/indico/htdocs/sass/partials/_messageboxes.scss
+++ b/indico/htdocs/sass/partials/_messageboxes.scss
@@ -15,7 +15,7 @@
  * along with Indico; if not, see <http://www.gnu.org/licenses/>.
  */
 
-$default-spacing: 5px;
+$default-spacing: 10px;
 
 %message-box {
     @include border-radius();
